# code-dev

./: .gitignore  .gitmodules  README.md
SortMethod/: HeapSort.cpp  InsertSort.cpp  MergeSort.h  QuickSort.h  RadixSort.cpp  SConstruct  SelectionSort.cpp  main.cpp  mySort.h  冒泡排序.txt  堆排序.txt
algorithm/02.kNN/: 2.py  HandWritingNumber.py  test.py
algorithm/03.DecisionTree/: 3.komodoproject  3.py  Trees.py
algorithm/04.Bayes/: 4.py  Bayes.py
algorithm/05.LogRegres/: 5.py
algorithm/06.SVM/: 6.komodoproject
algorithm/07.Boost/: 7.py  boost.py
algorithm/08.ReGression/: 8.komodoproject  8.py  ReGression.py
algorithm/09.RegTrees/: 9.komodoproject  9.py  regTrees.py  treeExplorer.py
algorithm/10.kMeans/: 10-2.py  10.komodoproject  10.py  kMeans.py  kMeans2.py
algorithm/100.kmeans/: kmeans.py
algorithm/11.aprior/: 11.komodoproject
algorithm/12.fpGrowth/: 12.komodoproject
algorithm/13.pca/: 13.komodoproject  13.py  pca.py
algorithm/14.svdRec/: 14.komodoproject  14.py
algorithm/15.mrMeanReducer/: 15.komodoproject
algorithm/2.kNN/: 2.komodoproject
algorithm/3.DecisionTree/: TreePlotter.py
algorithm/4.Bayes/: 4.py
algorithm/5.LogRegres/: 5.komodoproject
algorithm/7.boost/: 7.komodoproject
cpp_demo/: beat_win.cpp  boost_test.cpp  future.cpp  future2.cpp  make.sh  min_variance_sum.cpp  power_test.cpp  sigma_multiply.py  test.cpp  vector.cpp
gtest/: SConstruct  googletest.cc
leet/: .ccls  CMakeLists.txt  build.sh
leet/src/: CMakeLists.txt  two_sum.cpp
leetcode/: .ccls  .clang-format  CMakeLists.txt  Z.README  build.sh  leetcode.tar  prepare.sh
leetcode/001.TwoSum/: .sconsign.dblite  20191127.cpp  Solution4ms.h  Solution_N.h  Solution_N2.h  Solution_Review.h  lintcode.h  main.cpp  mapTest.cpp
leetcode/001.two-sum/: Solution_N.h  readme
leetcode/002.AddTwoNumber/: .sconsign.dblite  20191127.cpp  Makefile  Solution_B.h  Solution_Review.h  main.cpp  readme
leetcode/002.add-two-number/: Solution.h  main.cpp
leetcode/003.LongestSubstr/: .sconsign.dblite  20190127.cpp  Solution.h  Solution_B.h  Solution_Review.h  main.cpp  readme
leetcode/003.longest-substr/: .sconsign.dblite  main.cpp  readme
leetcode/004.MediaArrays/: .sconsign.dblite  20190127.cpp  Solution.h  Solution_B.h  Solution_Review.h  main.cpp  readme
leetcode/004.media-arrays/: .sconsign.dblite  main.cpp  readme
leetcode/005.Palindrome/: .sconsign.dblite  Solution.h  Solution_Review.h  main.cpp  readme
leetcode/006.ZigzagConversion/: .sconsign.dblite  Solution.h  main.cpp  readme
leetcode/007.ReverseInt/: SConstruct  Solution.h  main.cpp  reverseInt.cpp
leetcode/007.reverse-int/: .sconsign.dblite  Solution.h  main.cpp  readme
leetcode/008.String2Int/: .sconsign.dblite  SConstruct  Solution.h  str2int.cpp
leetcode/008.str2int/: main.cpp  readme
leetcode/009.PalindromeNumber/: .sconsign.dblite  Solution.h  main.cpp  readme
leetcode/010.RegularMatching/: .sconsign.dblite  Solution.h
leetcode/include/List1/: CMakeLists.txt  List.h  ut_list.cpp
leetcode/include/Node1/: CMakeLists.txt  Node.h  ut_node.cpp
leetcode/include/Vector1/: CMakeLists.txt  Vector.h  ut_vector.cpp
leetcode/test/: CMakeLists.txt  ut_0001_two_sum.cpp  ut_0002_add_two_number.cpp  ut_0003_longest_substr.cpp  ut_0004_media_arrays.cpp  ut_0005_palindrome.cpp  ut_0006_zigzag_conversion.cpp  ut_0007_reverse_int.cpp  ut_0008_string2_int.cpp  ut_0009_palindrome_number.cpp  ut_0010_regular_matching.cpp  ut_0011_container_most_water.cpp  ut_0012_int2_roman.cpp  ut_0013_roman2_int.cpp  ut_0014_longest_common_prefix.cpp  ut_0017_combination_of_phone_number.cpp  ut_0018_four_sum.cpp  ut_0019_remove_nth_node_from_end_of_list.cpp  ut_0020_valid_parentheses.cpp  ut_0021_merge_two_sorted_lists.cpp  ut_0022_create_parentheses.cpp  ut_0023_merge_k_sorted_lists.cpp  ut_0024_swap_nodes_in_pairs.cpp  ut_0025_reverse_nodes_in_k_group.cpp  ut_0027_remove_element.cpp  ut_0028_implement_strstr.cpp  ut_0029_divide_two_integer.cpp  ut_0031_next_permutation.cpp  ut_0032_parentheses.cpp  ut_0035_search_insert_position.cpp  ut_0036_valid_soduku.cpp  ut_0037_sudoku_solver.cpp  ut_0039_combination_sum.cpp  ut_0041_first_missing_positive.cpp  ut_0042_trapping_rain_water.cpp  ut_0043_multiply_strings.cpp  ut_0044_wildcard_matching.cpp  ut_0045_jump_game_ii.cpp  ut_0045_jump_games_i_i.cpp  ut_0046_permutation.cpp  (+84 more)
leetcode_one/: CMakeLists.txt
leetcode_one/test/: .CMakeLists.txt.swp  .gtest_two_sum_0001.cpp.swp  CMakeLists.txt  gtest_0002_add_two_number.cpp  gtest_0003_longest_substr.cpp  gtest_0004_media_arrays.cpp  gtest_0005_palindrome.cpp  gtest_0006_zigzag_conversion.cpp  gtest_0007_reverse_int.cpp  gtest_0008_string2_int.cpp  gtest_0009_palindrome_number.cpp  gtest_0010_regular_matching.cpp  gtest_0011_container_most_water.cpp  gtest_0012_int2_roman.cpp  gtest_0013_roman2_int.cpp  gtest_0017_combination_of_phone_number.cpp  gtest_0018_four_sum.cpp  gtest_0020_valid_parentheses.cpp  gtest_0022_create_parentheses.cpp  gtest_0027_remove_element.cpp  gtest_0029_divide_two_integer.cpp  gtest_0032_parentheses.cpp  gtest_0035_search_insert_position.cpp  gtest_0036_valid_soduku.cpp  gtest_0037_sudoku_solver.cpp  gtest_0039_combination_sum.cpp  gtest_0041_first_missing_positive.cpp  gtest_0043_multiply_strings.cpp  gtest_0045_jump_games_i_i.cpp  gtest_0046_permutation.cpp  gtest_0047_permutation_i_i.cpp  gtest_0048_rotate_image.cpp  gtest_0049_group_anagrams.cpp  gtest_0050_pow_x_n.cpp  gtest_0051_n_queens.cpp  gtest_0053_max_sub_array.cpp  gtest_0057_insert_interval.cpp  gtest_0059_spiral_matrix_i_i.cpp  gtest_0065_valid_number.cpp  gtest_0066_plus_one.cpp  (+39 more)
leetcode_v2/: .clang-format  header.h
question/: 001.牛顿法与梯度下降法
rl/: CartPole-tensorflow-keras.py
sort/: .sconsign.dblite  BubbleSort.cpp  HeapSort.cpp  MergeSort.cpp  QuickSort.cpp  RadixSort.cpp  SConstruct  ShellSort.cpp  quick_sort  quick_sort.cpp
test_cpp/: bitwise_opration.cpp  make.sh  string.cpp
test_go/: BkdrHash.go  append.go  consts.go  mapmap.go  para.go  slice.go  split.go  test.go  trim.go
test_java/: Commenter.java  run
(+835 files in other folders)
