# 查找 GTest 库
find_package(GTest REQUIRED)
# GTest 的头文件
include_directories(${GTEST_INCLUDE_DIRS} /usr/local/include/ ../include ../include/Node)
link_directories(../lib /usr/local/lib)

#add_executable(gtest_helloworld gtest_helloworld.cpp ../src/helloworld/helloworld.cpp)
#target_link_libraries(gtest_helloworld ${GTEST_BOTH_LIBRARIES} pthread )
#gtest_discover_tests(gtest_helloworld)

add_executable(gtest_twosum gtest_two_sum_0001.cpp ../src/two_sum_0001/two_sum.cpp)
target_link_libraries(gtest_twosum ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_twosum)

add_executable(gtest_0237_del_node_in_list gtest_0237_del_node_in_list.cpp)
target_link_libraries(gtest_twosum ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_twosum)

add_executable(gtest_0037_sudoku_solver gtest_0037_sudoku_solver.cpp)
target_link_libraries(gtest_0037_sudoku_solver ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0037_sudoku_solver)

add_executable(gtest_0539_min_time_diff gtest_0539_min_time_diff.cpp)
target_link_libraries(gtest_0539_min_time_diff ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0539_min_time_diff)

add_executable(gtest_0279_perfect_squares gtest_0279_perfect_squares.cpp)
target_link_libraries(gtest_0279_perfect_squares ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0279_perfect_squares)

add_executable(gtest_0036_valid_soduku gtest_0036_valid_soduku.cpp)
target_link_libraries(gtest_0036_valid_soduku ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0036_valid_soduku)

add_executable(gtest_0226_invert_binary_tree gtest_0226_invert_binary_tree.cpp)
target_link_libraries(gtest_0226_invert_binary_tree ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0226_invert_binary_tree)

add_executable(gtest_0129_sum_root2_leaf_num gtest_0129_sum_root2_leaf_num.cpp)
target_link_libraries(gtest_0129_sum_root2_leaf_num ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0129_sum_root2_leaf_num)

add_executable(gtest_0201_bitwise_a_n_d_num_range gtest_0201_bitwise_a_n_d_num_range.cpp)
target_link_libraries(gtest_0201_bitwise_a_n_d_num_range ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0201_bitwise_a_n_d_num_range)

add_executable(gtest_0072_edit_distance gtest_0072_edit_distance.cpp)
target_link_libraries(gtest_0072_edit_distance ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0072_edit_distance)

add_executable(gtest_0179_largest_number gtest_0179_largest_number.cpp)
target_link_libraries(gtest_0179_largest_number ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0179_largest_number)

add_executable(gtest_0045_jump_games_i_i gtest_0045_jump_games_i_i.cpp)
target_link_libraries(gtest_0045_jump_games_i_i ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0045_jump_games_i_i)

add_executable(gtest_0004_media_arrays gtest_0004_media_arrays.cpp)
target_link_libraries(gtest_0004_media_arrays ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0004_media_arrays)

add_executable(gtest_0206_reverse_list gtest_0206_reverse_list.cpp)
target_link_libraries(gtest_0206_reverse_list ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0206_reverse_list)

add_executable(gtest_0220_contains_dup_i_i_i gtest_0220_contains_dup_i_i_i.cpp)
target_link_libraries(gtest_0220_contains_dup_i_i_i ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0220_contains_dup_i_i_i)

add_executable(gtest_0113_path_sum_i_i gtest_0113_path_sum_i_i.cpp)
target_link_libraries(gtest_0113_path_sum_i_i ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0113_path_sum_i_i)

add_executable(gtest_0035_search_insert_position gtest_0035_search_insert_position.cpp)
target_link_libraries(gtest_0035_search_insert_position ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0035_search_insert_position)

add_executable(gtest_0039_combination_sum gtest_0039_combination_sum.cpp)
target_link_libraries(gtest_0039_combination_sum ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0039_combination_sum)

add_executable(gtest_0273_integerto_english_words gtest_0273_integerto_english_words.cpp)
target_link_libraries(gtest_0273_integerto_english_words ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0273_integerto_english_words)

add_executable(gtest_0202_happy_number gtest_0202_happy_number.cpp)
target_link_libraries(gtest_0202_happy_number ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0202_happy_number)

add_executable(gtest_0051_n_queens gtest_0051_n_queens.cpp)
target_link_libraries(gtest_0051_n_queens ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0051_n_queens)

add_executable(gtest_0088_merge_sorted_array gtest_0088_merge_sorted_array.cpp)
target_link_libraries(gtest_0088_merge_sorted_array ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0088_merge_sorted_array)

add_executable(gtest_0283_move_zeros gtest_0283_move_zeros.cpp)
target_link_libraries(gtest_0283_move_zeros ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0283_move_zeros)

add_executable(gtest_0009_palindrome_number gtest_0009_palindrome_number.cpp)
target_link_libraries(gtest_0009_palindrome_number ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0009_palindrome_number)

add_executable(gtest_0066_plus_one gtest_0066_plus_one.cpp)
target_link_libraries(gtest_0066_plus_one ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0066_plus_one)

add_executable(gtest_0215_kth_large_num gtest_0215_kth_large_num.cpp)
target_link_libraries(gtest_0215_kth_large_num ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0215_kth_large_num)

add_executable(gtest_0522_longest_uncommon_subsequence_i_i gtest_0522_longest_uncommon_subsequence_i_i.cpp)
target_link_libraries(gtest_0522_longest_uncommon_subsequence_i_i ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0522_longest_uncommon_subsequence_i_i)

add_executable(gtest_0013_roman2_int gtest_0013_roman2_int.cpp)
target_link_libraries(gtest_0013_roman2_int ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0013_roman2_int)

add_executable(gtest_0011_container_most_water gtest_0011_container_most_water.cpp)
target_link_libraries(gtest_0011_container_most_water ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0011_container_most_water)

add_executable(gtest_0017_combination_of_phone_number gtest_0017_combination_of_phone_number.cpp)
target_link_libraries(gtest_0017_combination_of_phone_number ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0017_combination_of_phone_number)

add_executable(gtest_0048_rotate_image gtest_0048_rotate_image.cpp)
target_link_libraries(gtest_0048_rotate_image ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0048_rotate_image)

add_executable(gtest_0115_distinct_sub_sequence gtest_0115_distinct_sub_sequence.cpp)
target_link_libraries(gtest_0115_distinct_sub_sequence ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0115_distinct_sub_sequence)

add_executable(gtest_0059_spiral_matrix_i_i gtest_0059_spiral_matrix_i_i.cpp)
target_link_libraries(gtest_0059_spiral_matrix_i_i ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0059_spiral_matrix_i_i)

add_executable(gtest_0008_string2_int gtest_0008_string2_int.cpp)
target_link_libraries(gtest_0008_string2_int ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0008_string2_int)

add_executable(gtest_0010_regular_matching gtest_0010_regular_matching.cpp)
target_link_libraries(gtest_0010_regular_matching ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0010_regular_matching)

add_executable(gtest_0274_h_index gtest_0274_h_index.cpp)
target_link_libraries(gtest_0274_h_index ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0274_h_index)

add_executable(gtest_0532_diff_pairs_in_array gtest_0532_diff_pairs_in_array.cpp)
target_link_libraries(gtest_0532_diff_pairs_in_array ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0532_diff_pairs_in_array)

add_executable(gtest_0859_buddy_strings gtest_0859_buddy_strings.cpp)
target_link_libraries(gtest_0859_buddy_strings ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0859_buddy_strings)

add_executable(gtest_0099_recover_binary_search_tree gtest_0099_recover_binary_search_tree.cpp)
target_link_libraries(gtest_0099_recover_binary_search_tree ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0099_recover_binary_search_tree)

add_executable(gtest_0046_permutation gtest_0046_permutation.cpp)
target_link_libraries(gtest_0046_permutation ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0046_permutation)

add_executable(gtest_0050_pow_x_n gtest_0050_pow_x_n.cpp)
target_link_libraries(gtest_0050_pow_x_n ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0050_pow_x_n)

add_executable(gtest_0012_int2_roman gtest_0012_int2_roman.cpp)
target_link_libraries(gtest_0012_int2_roman ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0012_int2_roman)

add_executable(gtest_0006_zigzag_conversion gtest_0006_zigzag_conversion.cpp)
target_link_libraries(gtest_0006_zigzag_conversion ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0006_zigzag_conversion)

add_executable(gtest_9999_reverse_list gtest_9999_reverse_list.cpp)
target_link_libraries(gtest_9999_reverse_list ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_9999_reverse_list)

add_executable(gtest_0043_multiply_strings gtest_0043_multiply_strings.cpp)
target_link_libraries(gtest_0043_multiply_strings ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0043_multiply_strings)

add_executable(gtest_0002_add_two_number gtest_0002_add_two_number.cpp)
target_link_libraries(gtest_0002_add_two_number ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0002_add_two_number)

add_executable(gtest_0086_partition_list gtest_0086_partition_list.cpp)
target_link_libraries(gtest_0086_partition_list ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0086_partition_list)

add_executable(gtest_0707_design_linked_list gtest_0707_design_linked_list.cpp)
target_link_libraries(gtest_0707_design_linked_list ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0707_design_linked_list)

add_executable(gtest_0032_parentheses gtest_0032_parentheses.cpp)
target_link_libraries(gtest_0032_parentheses ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0032_parentheses)

add_executable(gtest_0067_add_binary gtest_0067_add_binary.cpp)
target_link_libraries(gtest_0067_add_binary ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0067_add_binary)

add_executable(gtest_0097_interleaving_string gtest_0097_interleaving_string.cpp)
target_link_libraries(gtest_0097_interleaving_string ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0097_interleaving_string)

add_executable(gtest_0095_unique_bin_search_trees_i_i gtest_0095_unique_bin_search_trees_i_i.cpp)
target_link_libraries(gtest_0095_unique_bin_search_trees_i_i ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0095_unique_bin_search_trees_i_i)

add_executable(gtest_0029_divide_two_integer gtest_0029_divide_two_integer.cpp)
target_link_libraries(gtest_0029_divide_two_integer ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0029_divide_two_integer)

add_executable(gtest_0047_permutation_i_i gtest_0047_permutation_i_i.cpp)
target_link_libraries(gtest_0047_permutation_i_i ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0047_permutation_i_i)

add_executable(gtest_0027_remove_element gtest_0027_remove_element.cpp)
target_link_libraries(gtest_0027_remove_element ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0027_remove_element)

add_executable(gtest_0257_bin_tree_paths gtest_0257_bin_tree_paths.cpp)
target_link_libraries(gtest_0257_bin_tree_paths ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0257_bin_tree_paths)

add_executable(gtest_0075_sort_colors gtest_0075_sort_colors.cpp)
target_link_libraries(gtest_0075_sort_colors ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0075_sort_colors)

add_executable(gtest_0003_longest_substr gtest_0003_longest_substr.cpp)
target_link_libraries(gtest_0003_longest_substr ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0003_longest_substr)

add_executable(gtest_0020_valid_parentheses gtest_0020_valid_parentheses.cpp)
target_link_libraries(gtest_0020_valid_parentheses ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0020_valid_parentheses)

add_executable(gtest_0710_random_pickwith_blacklist gtest_0710_random_pickwith_blacklist.cpp)
target_link_libraries(gtest_0710_random_pickwith_blacklist ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0710_random_pickwith_blacklist)

add_executable(gtest_0007_reverse_int gtest_0007_reverse_int.cpp)
target_link_libraries(gtest_0007_reverse_int ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0007_reverse_int)

add_executable(gtest_0090_subsets_i_i gtest_0090_subsets_i_i.cpp)
target_link_libraries(gtest_0090_subsets_i_i ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0090_subsets_i_i)

add_executable(gtest_0287_findthe_duplicate_number gtest_0287_findthe_duplicate_number.cpp)
target_link_libraries(gtest_0287_findthe_duplicate_number ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0287_findthe_duplicate_number)

add_executable(gtest_0018_four_sum gtest_0018_four_sum.cpp)
target_link_libraries(gtest_0018_four_sum ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0018_four_sum)

add_executable(gtest_0057_insert_interval gtest_0057_insert_interval.cpp)
target_link_libraries(gtest_0057_insert_interval ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0057_insert_interval)

add_executable(gtest_0078_subsets gtest_0078_subsets.cpp)
target_link_libraries(gtest_0078_subsets ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0078_subsets)

add_executable(gtest_0022_create_parentheses gtest_0022_create_parentheses.cpp)
target_link_libraries(gtest_0022_create_parentheses ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0022_create_parentheses)

add_executable(gtest_0065_valid_number gtest_0065_valid_number.cpp)
target_link_libraries(gtest_0065_valid_number ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0065_valid_number)

add_executable(gtest_0049_group_anagrams gtest_0049_group_anagrams.cpp)
target_link_libraries(gtest_0049_group_anagrams ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0049_group_anagrams)

add_executable(gtest_0173_b_s_t_iterator gtest_0173_b_s_t_iterator.cpp)
target_link_libraries(gtest_0173_b_s_t_iterator ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0173_b_s_t_iterator)

add_executable(gtest_0069_sqrt_int gtest_0069_sqrt_int.cpp)
target_link_libraries(gtest_0069_sqrt_int ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0069_sqrt_int)

add_executable(gtest_0053_max_sub_array gtest_0053_max_sub_array.cpp)
target_link_libraries(gtest_0053_max_sub_array ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0053_max_sub_array)

add_executable(gtest_0005_palindrome gtest_0005_palindrome.cpp)
target_link_libraries(gtest_0005_palindrome ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0005_palindrome)

add_executable(gtest_0200_numberof_islands gtest_0200_numberof_islands.cpp)
target_link_libraries(gtest_0200_numberof_islands ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0200_numberof_islands)

add_executable(gtest_0041_first_missing_positive gtest_0041_first_missing_positive.cpp)
target_link_libraries(gtest_0041_first_missing_positive ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0041_first_missing_positive)

add_executable(gtest_0100_same_tree gtest_0100_same_tree.cpp)
target_link_libraries(gtest_0100_same_tree ${GTEST_BOTH_LIBRARIES} pthread )
gtest_discover_tests(gtest_0100_same_tree)
